# cohesive

./: .cursorrules  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.base.json  tsconfig.eval.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
evals/: vitest.config.ts
evals/cases/: explore-build.eval.ts  long-context.eval.ts  loop-unit.eval.ts
evals/fixtures/: haystack.gen.ts
evals/fixtures/todo-app/: check.js  package.json
evals/harness/: assertions.ts  llm.ts  report.ts  run-case.ts  tauri-shim.ts
evals/scripts/: export-trace.ts
patches/: mdast-util-gfm-autolink-literal+2.0.1.patch  remend+1.3.0.patch
scripts/: bump-version.mjs  generate-app-icon.mjs
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  project_ops.rs  settings.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/llm/: mod.rs
src-tauri/src/shell/: mod.rs  permissions.rs  runner.rs
src/assets/: brand-mark.geometry.ts
src/components/chat/: composer-keydown.ts  message-labels.ts  useChatAutoScroll.ts
src/core/: index.ts  product-flags.ts
src/core/code/: agent.service.ts  (+2 more)
src/demo/: DemoHud.tsx  DemoRuntime.tsx  FakeCursor.tsx  bootstrap.ts  demo.service.ts  dom.ts  engine.ts  isDemoMode.ts  replay.ts  types.ts  useDemoMode.ts
src/styles/: global.css
website/: index.html  package-lock.json  package.json
website/src/: App.tsx  config.ts  styles.css
(+76 files in other folders)
